<resources>
    <string name="app_name">Calendar</string>
    <string name="add">Add</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="name">Название</string>
    <string name="start">Начало</string>
    <string name="end">Конец</string>
    <string name="testText">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vestibulum gravida congue risus ac dignissim. Vestibulum sed maximus velit. Integer iaculis id enim sed egestas.</string>
    <string name="description">Описание</string>
    <string name="save">Сохранить</string>
</resources>